--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "james.xue/login-captcha": "^2.0",
         "jxlwqq/simditor": "^1.0",
         "laravel-admin-ext/log-viewer": "^1.0",
         "laravel/framework": "^7.29",
