--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
         "laravel-admin-ext/log-viewer": "^1.0",
         "laravel/framework": "^7.29",
         "laravel/socialite": "^5.5",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "phpunit/phpunit": "^9.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.3",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
+        "nunomaduro/collision": "^4.3"
     },
     "config": {
         "optimize-autoloader": true,
