--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/framework": "^7.29",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "spatie/laravel-backup": "^6.16"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
