--- a/docker/nginx_local.conf
+++ b/docker/nginx_local.conf
@@ -33,36 +33,9 @@ http {
 
     server {
         listen      80;
-        server_name mmmx17.cn;
-        rewrite ^(.*) https:$host$1 permanent; 
+        server_name www.test.com;
         root        /www/blog/public;
 
-        location / {
-            try_files $uri /index.php?$query_string;
-        }
-
-        location ~* \.php {
-            include                 fastcgi_params;
-            fastcgi_index           index.php;
-            fastcgi_pass            127.0.0.1:9000;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param           PATH_INFO       $fastcgi_path_info;
-            fastcgi_param           SCRIPT_NAME     $fastcgi_script_name;
-            fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
-    }
-
-    server {
-        listen       443;
-        server_name  mmmx17.cn #你们的域名，如www.abc.com;
-        ssl                  on;
-        ssl_certificate      /ssl/server.pem; #根据实际的路径和文件名配置
-        ssl_certificate_key   /ssl/server.key; #根据实际的路径和文件名配置
-        ssl_session_timeout  5m;
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2; #按照这个协议配
-        ssl_ciphers  ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;#按照这个套件配
-        ssl_prefer_server_ciphers   on;
-        root        /www/blog/public;
         location / {
             try_files $uri /index.php?$query_string;
         }
