--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -56,8 +56,8 @@ http {
         listen       443;
         server_name  mmmx17.cn #你们的域名，如www.abc.com;
         ssl                  on;
-        ssl_certificate      /ssl/server.pem; #根据实际的路径和文件名配置
-        ssl_certificate_key   /ssl/server.key; #根据实际的路径和文件名配置
+        ssl_certificate      /ssl/private.pem; #根据实际的路径和文件名配置
+        ssl_certificate_key   /ssl/private.key; #根据实际的路径和文件名配置
         ssl_session_timeout  5m;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2; #按照这个协议配
         ssl_ciphers  ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;#按照这个套件配
