nginx配置区分环境

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -56,7 +56,7 @@ http {
         listen       443;
         server_name  mmmx17.cn #你们的域名，如www.abc.com;
         ssl                  on;
-        ssl_certificate      /ssl/private.pem; #根据实际的路径和文件名配置
+        ssl_certificate      /ssl/public.pem; #根据实际的路径和文件名配置
         ssl_certificate_key   /ssl/private.key; #根据实际的路径和文件名配置
         ssl_session_timeout  5m;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2; #按照这个协议配
