--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -29,27 +29,15 @@ http {
     gzip_types          text/css application/javascript application/json image/png image/webp image/apng image/jpeg image/x-icon;
 
     error_log           /www/z_error.log;
-    access_log          /www/z_$host.log main;
+    access_log          /www/z_access.log main;
+
+    ssl_certificate      /ssl/public.pem; 
+    ssl_certificate_key   /ssl/private.key; 
 
     server {
         listen      80;
         server_name mmmx17.cn;
         rewrite ^(.*) https:$host$1 permanent; 
-        root        /www/blog/public;
-
-        location / {
-            try_files $uri /index.php?$query_string;
-        }
-
-        location ~* \.php {
-            include                 fastcgi_params;
-            fastcgi_index           index.php;
-            fastcgi_pass            127.0.0.1:9000;
-            fastcgi_split_path_info ^(.+\.php)(.*)$;
-            fastcgi_param           PATH_INFO       $fastcgi_path_info;
-            fastcgi_param           SCRIPT_NAME     $fastcgi_script_name;
-            fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        }
     }
 
     server {
