--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 ADMIN_ROUTE_PREFIX=
+QINIU_AK_KEY=
+QINIU_SK_KEY=
