--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,14 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "james.xue/login-captcha": "^2.0",
-        "jxlwqq/simditor": "^1.0",
         "laravel-admin-ext/log-viewer": "^1.0",
         "laravel/framework": "^7.29",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
+        "maxiao64/simditor": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "spatie/laravel-backup": "^6.16"
+        "spatie/laravel-backup": "^6.16",
+        "zgldh/qiniu-laravel-storage": "0.10.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
